configuraçãoe e estilização do css

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,7 +37,7 @@
       
   
       <div padding>
-        <button ion-button block type="submit" [disabled]="!form.valid" (click)="onSubmit()">Salvar</button>
+        <button ion-button block type="submit" [disabled]="!form.valid" (click)="get()">Salvar</button>
       </div>
     </form>
 
