--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
-<ion-tabs tabsPlacement="top">
-  <ion-tab [root]="tab1Root" tabTitle="Calcular" tabIcon="star"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Crush" tabIcon="chatboxes"></ion-tab>
+<ion-tabs tabsPlacement="top" color="danger">
+  <ion-tab [root]="tab1Root" tabTitle="Calcular" tabIcon="heart" color="danger"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Crush" tabIcon="heart-outline"></ion-tab>
   
 </ion-tabs>
